--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -2,7 +2,7 @@
 	{{name}}
 
 	<button class="change-eaten" data-id="{{id}}" data-newsleep="{{eaten}}">
-		{{#if eaten}}Eat!{{else}}Not eaten!{{/if}}
+		{{#if eaten}}Eat this!{{else}}Not eaten!{{/if}}
 	</button>
 
 	<button class="delete-burger" data-id="{{this.id}}">DELETE!</button>
